SourceOrg/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>N_oflicensesexecuted__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Of Licenses Executed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Of_University_Colleges_Collaborating__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Rollup of # Of University Colleges Collaborating From Source Organizations - Not Interactions</description>
        <inlineHelpText>Rollup of # Of University Colleges Collaborating From Source Organizations - Not Interactions</inlineHelpText>
        <label># Of University Colleges Collaborating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Locations__c</fullName>
        <description>Fields to allow Users to enter Other Locations of the Organization</description>
        <inlineHelpText>Fields to allow Users to enter Other Locations of the Organization</inlineHelpText>
        <label>Other Locations</label>
        <length>500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent_Company_D_U_N_S_Number__c</fullName>
        <formula>DandbCompany.ParentOrHqDunsNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Company D-U-N-S Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peoplesoft_Create_Date__c</fullName>
        <description>Date the record was created in Peoplesoft. Filled in with the integration.</description>
        <inlineHelpText>Date the record was created in Peoplesoft, the system for the Center for Research</inlineHelpText>
        <label>Peoplesoft Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Peoplesoft_Last_Modified_Date__c</fullName>
        <description>Date the record was last modified in Peoplesoft. Filled in with the integration</description>
        <inlineHelpText>Date the record was last modified in Peoplesoft, the system for the Center of Research</inlineHelpText>
        <label>Peoplesoft Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Source_Org_Count__c</fullName>
        <inlineHelpText>Count the total primary source organizations, if the number is 0 or larger than 1, then duplicate primary source organization are seclected</inlineHelpText>
        <label>Primary Source Org Count</label>
        <summarizedField>Source_Organization__c.FPrimary_Source_Org_Flag__c</summarizedField>
        <summaryForeignKey>Source_Organization__c.Master_Organization__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Source_Org_Id__c</fullName>
        <label>Primary Source Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RU_Count_Master_RA__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Hidden field to denote if there is a Master RA with any of the related Source Organizations</description>
        <label>RU Count Master RA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RU_Count_Strategic_Hiring_Partner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Hidden Counter to check if any of the related Source Organizations have been selected as a strategic hiring partner</description>
        <label>RU Count Strategic Hiring Partner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RU_DB_LocationType__c</fullName>
        <description>Hidden field for filtering master organizations based on related D&amp;B account location type</description>
        <formula>TEXT(DandbCompany.LocationStatus)</formula>
        <inlineHelpText>Hidden field for filtering master organizations based on related D&amp;B account location type</inlineHelpText>
        <label>RU DB LocationType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RU_Job_Count_Total__c</fullName>
        <description>Hidden field to be displayed in the CEO Report</description>
        <formula>RU_Jobs_Count_1__c +  RU_Jobs_Count_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hidden field to be displayed in the CEO Report</inlineHelpText>
        <label>RU Job Count Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RU_Jobs_Count_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Hidden field for calculating number of Jobs</description>
        <inlineHelpText>Hidden field for calculating number of Jobs</inlineHelpText>
        <label>RU Jobs Count 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RU_Jobs_Count_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Hidden field for Jobs Count - 2</description>
        <inlineHelpText>Hidden field for Jobs Count - 2</inlineHelpText>
        <label>RU Jobs Count 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratio_Value_ED__c</fullName>
        <label>Ratio Value ED</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ratio_Value_ITE__c</fullName>
        <label>Ratio Value ITE</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ratio_Value_KT__c</fullName>
        <label>Ratio Value KT</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ratio_Value_PC__c</fullName>
        <label>Ratio Value PC</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ratio_Value_R_S__c</fullName>
        <inlineHelpText>Sum Product (Formulated)/Sum Product (Expected)</inlineHelpText>
        <label>Ratio Value R&amp;S</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ratio_Weight_ED_1__c</fullName>
        <formula>IF( Formula_ED_E_1__c &gt;0,   Formula_ED_A_1__c  /Formula_ED_E_1__c*  $Setup.CEOReport_Static_Values__c.ED_W_1__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio Weight ED 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratio_Weight_ED_2__c</fullName>
        <formula>IF( Formula_ED_E_2__c &gt;0, Formula_ED_A_2__c /Formula_ED_E_2__c* $Setup.CEOReport_Static_Values__c.ED_W_2__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio Weight ED 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratio_Weight_ED_3__c</fullName>
        <formula>IF( Formula_ED_E_3__c &gt;0, Formula_ED_A_3__c /Formula_ED_E_3__c* $Setup.CEOReport_Static_Values__c.ED_W_3__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio Weight ED 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratio_Weight_ITE_1__c</fullName>
        <formula>IF(  Formula_ITE_E_1__c  &gt;0,  Formula_ITE_A_1__c  /Formula_ITE_E_1__c*  $Setup.CEOReport_Static_Values__c.IT_W_1__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio Weight ITE 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratio_Weight_ITE_2__c</fullName>
        <formula>IF(  Formula_ITE_E_2__c  &gt;0,  Formula_ITE_A_2__c  /Formula_ITE_E_2__c*  $Setup.CEOReport_Static_Values__c.IT_W_2__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio Weight ITE 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratio_Weight_KT_1__c</fullName>
        <formula>IF(  Formula_KT_E_1__c  &gt;0,  Formula_KT_A_1__c  /Formula_KT_E_1__c*  $Setup.CEOReport_Static_Values__c.KT_W_1__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio Weight KT 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratio_Weight_KT_2__c</fullName>
        <formula>IF(  Formula_KT_E_2__c  &gt;0,  Formula_KT_A_2__c  /Formula_KT_E_2__c*  $Setup.CEOReport_Static_Values__c.KT_W_2__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio Weight KT 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratio_Weight_KT_3__c</fullName>
        <formula>IF(  Formula_KT_E_3__c  &gt;0,  Formula_KT_A_3__c  /Formula_KT_E_3__c*  $Setup.CEOReport_Static_Values__c.KT_W_3__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio Weight KT 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ratio_Weight_PC_1__c</fullName>
        <formula>IF(  Formula_PC_E_1__c  &gt;0,  Formula_PC_A_1__c  /Formula_PC_E_1__c *  $Setup.CEOReport_Static_Values__c.PC_W_1__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio Weight PC 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratio_Weight_PC_2__c</fullName>
        <formula>IF(  Formula_PC_E_2__c  &gt;0,  Formula_PC_A_2__c  /Formula_PC_E_2__c *  $Setup.CEOReport_Static_Values__c.PC_W_2__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio Weight PC 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratio_Weight_PC_3__c</fullName>
        <formula>IF(  Formula_PC_E_3__c  &gt;0,  Formula_PC_A_3__c  /Formula_PC_E_3__c *  $Setup.CEOReport_Static_Values__c.PC_W_3__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio Weight PC 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratio_Weight_R_S_1__c</fullName>
        <formula>IF( Formula_R_S_E_1__c &gt;0, Formula_R_S_A_1__c /Formula_R_S_E_1__c* $Setup.CEOReport_Static_Values__c.R_S_W_1__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio Weight R&amp;S 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratio_Weight_R_S_2__c</fullName>
        <formula>IF( Formula_R_S_E_2__c &gt;0, Formula_R_S_A_2__c /Formula_R_S_E_2__c* $Setup.CEOReport_Static_Values__c.R_S_W_2__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio Weight R&amp;S 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ratio_Weight_R_S_3__c</fullName>
        <formula>IF( Formula_R_S_E_3__c &gt;0, Formula_R_S_A_3__c /Formula_R_S_E_3__c* $Setup.CEOReport_Static_Values__c.R_S_W_3__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio Weight R&amp;S 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relevant_Outside_Activities__c</fullName>
        <description>Describe the relevant outside activities of the firm based on the Market Analysis</description>
        <inlineHelpText>Describe the relevant outside activities of the firm based on the Market Analysis</inlineHelpText>
        <label>Relevant Outside Activities</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Research_Bucket__c</fullName>
        <formula>IF( N_OfServiceAgreements__c + N_OfSponsoredResearchAwards__c + D_ForCapstoneProjects__c + N_OfJointSupervisorsofPhDandMaster__c &gt;=1,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Research Bucket</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SicDescription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>D&amp;B Company</label>
        <referenceTo>DandBCompany</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Org_Division__c</fullName>
        <label>Source Org Division</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Organization_Account_ID__c</fullName>
        <label>Source Organization Account ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Organization_System__c</fullName>
        <label>Source Organization System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_Created_Date__c</fullName>
        <label>Source System Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_System_Last_Modified_Date__c</fullName>
        <label>Source System Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_Of_Relevance__c</fullName>
        <description>Manual Entry - Statement Of Relevance</description>
        <inlineHelpText>Manual Entry - Statement Of Relevance</inlineHelpText>
        <label>Statement Of Relevance</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status_Of_Partnership__c</fullName>
        <description>Describe the Status of current relationship with this Master Organization for the CEO Report</description>
        <inlineHelpText>Describe the Status of current relationship with this Master Organization for the CEO Report</inlineHelpText>
        <label>Status Of Partnership</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Strategic_Partner_Value__c</fullName>
        <description>This number represents the number of different KU departments that have interactions with this company.</description>
        <formula>IF( ISBLANK( XID_Advance__c), 0, 1) + IF(ISBLANK( XID_Peoplesoft__c), 0, 1) + IF(ISBLANK( XID_Reggie__c), 0, 1) + IF(ISBLANK( XID_Symplicity__c), 0, 1) + IF(ISBLANK( XID_Wellspring__c), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This number represents the number of different KU departments that have interactions with this company.</inlineHelpText>
        <label>Strategic Partner # Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Arbitrary_Factor__c</fullName>
        <label>Valuation Total Arbitrary Factor</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contact__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of Contacts associated with this Master Organization.</description>
        <inlineHelpText>Total number of Contacts associated with this Master Organization.</inlineHelpText>
        <label>Total Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_ED_Score__c</fullName>
        <label>Total ED Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_ITE_Score__c</fullName>
        <label>Total ITE Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_KT_Score__c</fullName>
        <label>Total KT Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Engagements__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of KU Engagements related to this Master Organization.</description>
        <inlineHelpText>Total number of KU Engagements related to this Master Organization.</inlineHelpText>
        <label>Total Number of Engagements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_PC_Score__c</fullName>
        <label>Total PC Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_R_S_Score__c</fullName>
        <label>Total R&amp;S Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tradestyle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>D&amp;B Company</label>
        <referenceTo>DandBCompany</referenceTo>
        <relationshipLabel>Accounts (D&amp;B Company)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valuation_Ratio_History_Tracking__c</fullName>
        <description>Valuation Ratio values is copied into this field for History Tracking</description>
        <inlineHelpText>Valuation Ratio values is copied into this field for History Tracking</inlineHelpText>
        <label>Valuation Ratio History Tracking</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valuation_Ratio__c</fullName>
        <formula>Valuation_Score__c/5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valuation Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valuation_Score__c</fullName>
        <formula>Total_R_S_Score__c +  Total_KT_Score__c +  Total_ED_Score__c +  Total_PC_Score__c +  Total_ITE_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valuation Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wellspring_Create_Date__c</fullName>
        <description>Date the Wellspring Record was created. Filled in by the integration.</description>
        <inlineHelpText>Date the Wellspring Record was created</inlineHelpText>
        <label>Wellspring Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Wellspring_Last_Modified_Date__c</fullName>
        <description>The last time the record was modified within Wellspring. Filled in by the integration.</description>
        <inlineHelpText>The last time the record was modified within Wellspring</inlineHelpText>
        <label>Wellspring Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>XID_Advance__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID for Advance. Holds the Advance Endow_ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Advance Endow_ID</inlineHelpText>
        <label>XID Advance</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>XID_Peoplesoft__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID from Peoplesoft, which holds Reasearch Sponsor IDs</description>
        <externalId>true</externalId>
        <inlineHelpText>Reasearch Sponsor ID</inlineHelpText>
        <label>XID Peoplesoft</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>XID_Reggie__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID for the Reggie System. Built for future reference, since this is not currently being passed. Holds the Account ID for Continuing Education</description>
        <externalId>true</externalId>
        <inlineHelpText>Account ID for Continuing Education</inlineHelpText>
        <label>XID Reggie</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>XID_Symplicity__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID from Symplicity. Holds the Career Services Employer ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Career Services Employer ID</inlineHelpText>
        <label>XID Symplicity</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>XID_Wellspring__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID for the Wellspring/Sophia system. Holds the Tech Transfer organization_id</description>
        <externalId>true</externalId>
        <inlineHelpText>Tech Transfer organization_id</inlineHelpText>
        <label>XID Wellspring</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Xref_Symplicity__c</fullName>
        <formula>IF( ISBLANK(XID_Symplicity__c), &quot;&quot;,&quot;https://ku-csm.symplicity.com/manager/?mode=form&amp;id=&quot; &amp; XID_Symplicity__c &amp; &quot;&amp;employers_tab=1&quot;)</formula>
        <label>Xref Symplicity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddc_prospector__Sourced_from_Data_com__c</fullName>
        <description>Used by Data.com Prospector Reports</description>
        <formula>IF(OR(CONTAINS( TEXT(AccountSource) , &quot;Data.com&quot;),CONTAINS( TEXT(AccountSource) , &quot;Jigsaw&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sourced from Data.com</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MAAssignmentRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Assignment Rule</label>
        <referenceTo>sma__MAAssignmentRule__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_Master_Organizations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Account_Type_Banner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Master Organizations</label>
    </listViews>
    <listViews>
        <fullName>Master_Organizations_With_1_PSO</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Account_Type_Banner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Source_Org_Count__c</field>
            <operation>greaterOrEqual</operation>
            <value>2</value>
        </filters>
        <label>Master Organizations With &gt;1 PSO</label>
    </listViews>
    <listViews>
        <fullName>Master_Organizations_With_Primary_SrcOrg</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Primary_Source_Org_Count__c</columns>
        <columns>Primary_Source_Org_Id__c</columns>
        <columns>Account_Type_Banner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Source_Org_Count__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Master Organizations With Primary SrcOrg</label>
    </listViews>
    <listViews>
        <fullName>Master_Organizations_w_o_Primary_SrcOrg</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Account_Type_Banner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Primary_Source_Org_Count__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Master Organizations w/o Primary SrcOrg</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Account_Details_Cannot_Change</fullName>
        <active>false</active>
        <description>Account details cannot be changed by Non-Admin Users</description>
        <errorConditionFormula>AND(ISCHANGED(Name), $Profile.Name &lt;&gt; &quot;System Administrator Clone&quot;, $Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
        <errorMessage>Only System Administrator Can Change Key Details Of The Master Organization. Please Contact Your System Administrator to make this change.</errorMessage>
    </validationRules>
</CustomObject>